manifest/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: bizprogym.shop
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: publitech-auth-service
                port:
                  number: 3001
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: publitech-user-service
                port:
                  number: 3003
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: publitech-notification-service
                port:
                  number: 3002
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: publitech-chat-service
                port:
                  number: 3006        
          - path: /api/course
            pathType: Prefix
            backend:
              service:
                name: publitech-course-service
                port:
                  number: 3004
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: publitech-payment-service
                port:
                  number: 3005
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: publitech-chat-service
                port:
                  number: 3006
